force-app/main/default/objects/Product_Group_Label_Mapping__mdt/Product_Group_Label_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Mapping between product name / group / sub group users want to show on CustomerProductHoldingAndNBO page and key</description>
    <label>Product Group Label Mapping</label>
    <pluralLabel>Product Group Label Mapping</pluralLabel>
</CustomObject>