force-app/main/default/objects/Product_Group_Label_Mapping__mdt/fields/Current_Offer__c.field-meta.xml
<CustomField>
    <fullName>Current_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this value is set to true to tell that system will get the current offer data from backend , if false don&apos;t render the current offer</description>
    <label>Current Offer</label>
    <type>Checkbox</type>
</CustomField>