force-app/main/default/objects/Product_Group_Label_Mapping__mdt/fields/Is_Main_Value__c.field-meta.xml
<CustomField>
    <fullName>Is_Main_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>boolean to check if product group should be in bold when render the table on CustomerProductHoldingAndNBO</description>
    <label>Is Main Value</label>
    <type>Checkbox</type>
</CustomField>