force-app/main/default/objects/Product_Group_Label_Mapping__mdt/fields/Last_Offer__c.field-meta.xml
<CustomField>
    <fullName>Last_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>render last offer when this value is true</description>
    <label>Last Offer</label>
    <type>Checkbox</type>
</CustomField>