force-app/main/default/objects/Product_Group_Label_Mapping__mdt/fields/Product_Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Key__c</fullName>
    <description>use this value as a reference key</description>
    <label>Product Group Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>